# RocketSmith

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  GEMINI.md  H219T_4fin.ork  README.md  gemini-extension.json  main.py  package-lock.json  pyproject.toml  test_nose.stl
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: rocketsmith.md
.github/workflows/: claude.yml  gemini.yml  macos.yml  openrocket-macos.yml  openrocket-ubuntu.yml  openrocket-windows.yml  pytest.yml  ubuntu.yml  windows.yml
agents/: build123d.md  cadsmith.md  gui.md  manufacturing.md  openrocket.md  prusaslicer.md  rocketsmith.md
dataset/: PARTS_WORKFLOW.md  build_hf_dataset.py  generate_parts.py  visualize_parts.py
dataset/hf_parts/: .gitattributes  README.md
dataset/hf_parts/data/: camera.jsonl  fasteners.jsonl  launch.jsonl  parts.jsonl  recovery.jsonl
dataset/parts/: manifest.json
dataset/parts/camera/: gopro_mount.step
dataset/parts/launch/: rail_button_1010.step  rail_button_1515.step
dataset/parts/metadata/: parts.csv  parts.jsonl  parts_summary.json
dataset/parts_viewer/: README.md  button_head_screw_M3x10.gltf  button_head_screw_M3x12.gltf  button_head_screw_M3x6.gltf  button_head_screw_M3x8.gltf  button_head_screw_M4x10.gltf  button_head_screw_M4x12.gltf  button_head_screw_M4x16.gltf  button_head_screw_M4x8.gltf  button_head_screw_M5x10.gltf  button_head_screw_M5x12.gltf  button_head_screw_M5x16.gltf  button_head_screw_M5x20.gltf  button_head_screw_M6x12.gltf  button_head_screw_M6x16.gltf  button_head_screw_M6x20.gltf  countersunk_screw_M2x4.gltf  countersunk_screw_M2x6.gltf  countersunk_screw_M2x8.gltf  countersunk_screw_M3x10.gltf  countersunk_screw_M3x12.gltf  countersunk_screw_M3x6.gltf  countersunk_screw_M3x8.gltf  countersunk_screw_M4x10.gltf  countersunk_screw_M4x12.gltf  countersunk_screw_M4x16.gltf  countersunk_screw_M4x8.gltf  countersunk_screw_M5x10.gltf  countersunk_screw_M5x12.gltf  countersunk_screw_M5x16.gltf  countersunk_screw_M6x12.gltf  countersunk_screw_M6x16.gltf  countersunk_screw_M6x20.gltf  eyebolt_M10.gltf  eyebolt_M12.gltf  eyebolt_M6.gltf  eyebolt_M8.gltf  gopro_mount_gopro_mount.gltf  heat_set_insert_M2x3.gltf  heat_set_insert_M2x4.gltf  (+78 more)
gui/: data.js  files-tree.json
gui/logs/: session.jsonl
hooks/: hooks.json  session-end  session-start
plugins/rocketsmith/: .mcp.json
plugins/rocketsmith/.codex-plugin/: plugin.json
prusaslicer/configs/print/: body_tube.ini  nose_cone.ini
prusaslicer/configs/printer/: default_printer.ini
skills/cad-handoff/: SKILL.md
skills/design-for-additive-manufacturing/: SKILL.md
skills/generate-cad/: SKILL.md
skills/generate-structures/: SKILL.md
skills/mass-calibration/: SKILL.md
skills/modify-structures/: SKILL.md
skills/motor-selection/: SKILL.md
skills/print-preparation/: SKILL.md
skills/stability-analysis/: SKILL.md
src/rocketsmith/build123d/: extract.py
src/rocketsmith/cadsmith/: extract.py  extract_part.py  models.py  postprocess.py  utils.py  validate_script.py
src/rocketsmith/cli/: __init__.py  __main__.py  setup.py  update.py  version.py
src/rocketsmith/gui/: layout.py  lifecycle.py  log.py  server.py  watcher.py
src/rocketsmith/manufacturing/: __init__.py  dfam.py  models.py
src/rocketsmith/mcp/: __main__.py  install.py  setup.py  uninstall.py  update.py  utils.py
src/rocketsmith/openrocket/: cad_handoff.py  components.py  database.py  generate_tree.py  install.py  mcp.py  models.py  report.py  simulation.py  stability.py  utils.py
src/rocketsmith/prusaslicer/: config.py  database.py  install.py  mcp.py  models.py  slice.py  utils.py
src/rocketsmith/rag/: client.py  index.py
src/rocketsmith/workspace/: create.py  mcp.py
tests/: conftest.py
tests/build123d_test/: test_mesh.py
tests/build123d_test/mcp/: test_viewer.py
tests/cadsmith/: test_mesh.py  test_validate_script.py
tests/cadsmith/mcp/: test_run_script.py  test_viewer.py
tests/cli/: test_main.py  test_options.py
tests/gui/: test_lifecycle.py
tests/gui/mcp/: test_server.py  test_start.py
tests/manufacturing/: conftest.py  test_dfam.py
tests/manufacturing/mcp/: test_annotate_tree.py  test_manifest.py
tests/mcp_server/: test_main.py  test_setup.py  test_utils.py
tests/openrocket/: conftest.py  test_ascii.py  test_components.py  test_database.py  test_rkt.py  test_utils.py
tests/openrocket/cli/: test_components.py  test_database.py  test_database_interactive.py  test_install.py  test_version.py
tests/openrocket/mcp/: conftest.py  test_cad_handoff.py  test_component.py  test_database.py  test_flight.py  test_inspect.py  test_new.py
tests/prusaslicer/: conftest.py
tests/prusaslicer/cli/: test_install.py
tests/prusaslicer/mcp/: test_config.py  test_slice.py
(+282 files in other folders)
