[project]
name = "rocketsmith"
version = "0.0.13"
authors = [
  { name = "Peter Pak", email = "ppak10@gmail.com" },
  { name = "Jesse Barkley" },
  { name = "Rumi Loghmani" },
]
description = "Let agents design, simulate, and build your rocket."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.10.0",
    "chromadb>=0.6.0",
    "datasets>=3.0.0",
    "jpype1>=1.5,<1.7",
    "mcp>=1.12.3",
    "orhelper>=0.1.3",
    "pydantic>=2.11.7",
    "pyopengl>=3.1.10",
    "pyside6>=6.11.0",
    "questionary>=2.1.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/ppak10/RocketSmith"
Issues = "https://github.com/ppak10/RocketSmith/issues"

[project.scripts]
rocketsmith = "rocketsmith.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rocketsmith.data" = ["**/*.md", "**/*.ork", "**/*.step"]

[tool.black]
line-length = 88
target-version = ["py310"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "black>=25.1.0",
    "coverage>=7.10.5",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
filterwarnings = []

# build123d 0.10.0 pins cadquery-ocp<7.9, which pulls in vtk==9.3.1 — a version
# that has no Python 3.13 wheels. This override forces cadquery-ocp>=7.9.3.1,
# which depends on vtk==9.5.2 (3.13 compatible). Remove this once build123d
# releases a version that officially supports cadquery-ocp>=7.9.
[tool.uv]
override-dependencies = [
    "cadquery-ocp>=7.9.3.1",
    "jpype1<1.7",
    "onnxruntime<1.24",
]
